# Polinom

Polinom+Cmake/: CMakeLists.txt
Polinom+Cmake/List/: CMakeLists.txt  List.cpp  List.h
Polinom+Cmake/Polinom/: CMakeLists.txt  Monom.cpp  Monom.h  Polinom.cpp  Polinom.h
Polinom+Cmake/main/: CMakeLists.txt  Polinom_Lab.cpp
Polinom+Cmake/test/: CMakeLists.txt  test_Polinom.cpp
